[metadata]
name = bump
version = 2.0.0
summary = someprogram description
download_url = https://github.com/user/someprogram/downloads
home_page = https://github.com/user/someprogram
author = Sample Author
author_email = sample@example.com
classifier = Development Status :: 1 - Planning

[files]
packages = someprogram

resources =

