[metadata]
name = bump
version = 2.0.0
summary = bump makes following the Semantic Versioning Specification a breeze
download_url = https://github.com/reubano/someprogram/downloads/bump-2.0.0.tgz
home_page = https://github.com/reubano/someprogram
author = Reuben Cummings
author_email = reubano@gmail.com
classifier = Development Status :: 3 - Alpha
classifier = License :: OSI Approved :: The MIT License (MIT)
classifier = Environment :: Console
classifier = Intended Audience :: Developers
classifier = Operating System :: MacOS :: MacOS X
classifier = Operating System :: Microsoft :: Windows
requires_dist =
requires_python = >=2.5

[files]
packages = bump
resources =
