[metadata]
name = bump
version = 0.9.0
summary = bump makes following the Semantic Versioning Specification a breeze
download_url = https://github.com/reubano/someprogram/downloads/bump-2.0.0.tgz
home_page = https://github.com/reubano/someprogram
author = Reuben Cummings
author_email = reubano@gmail.com
classifier = Development Status :: 3 - Alpha
classifier = License :: OSI Approved :: The MIT License (MIT)
classifier = Environment :: Console
classifier = Intended Audience :: Developers
classifier = Operating System :: MacOS :: MacOS X
classifier = Operating System :: Microsoft :: Windows
requires_dist =
requires_python = >=2.5

[files]
packages = bump
resources =

[wheel]
universal = 1

[nosetests]
verbosity=1
where=script
# detailed-errors=1
# with-coverage=1
with-doctest=1
# debug=nose.loader

[unittest]
plugins = doctest

[doctest]
always-on = True
